# vcpkg-issue-7936

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakePresets.json  README.md  build.ps1  main.cpp  vcpkg.json
.github/workflows/: build.yml
